:memo: Update docs

--- a/mowl/examples/DL2Vec/DL2Vec.ipynb
+++ b/mowl/examples/DL2Vec/DL2Vec.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bb7072d3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "        dataset, \n",
     "        \"model_out\", \n",
     "        bidirectional_taxonomy=True,\n",
-    "        walking_method = \"node2vec\",\n",
+    "        walking_method = \"deepwalk\",\n",
     "        walk_length=5, \n",
     "        num_walks=3, \n",
     "        alpha=0,\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "47d212b0",
    "metadata": {},
    "outputs": [
@@ -79,26 +79,24 @@
      "text": [
       "INFO:root:Finished graph generation\n",
       "INFO:root:Generating random walks...\n",
-      "INFO:root:Preprocessing transition probs...\n",
-      "INFO:root:Finished preprocessing\n",
       "INFO:root:Walks generated\n",
       "INFO:root:Starting to train the Word2Vec model\n",
       "INFO:gensim.models.word2vec:collecting all words and their counts\n",
       "INFO:gensim.models.word2vec:PROGRESS: at sentence #0, processed 0 words, keeping 0 word types\n",
-      "INFO:gensim.models.word2vec:PROGRESS: at sentence #10000, processed 28718 words, keeping 10549 word types\n",
-      "INFO:gensim.models.word2vec:PROGRESS: at sentence #20000, processed 57408 words, keeping 11020 word types\n",
-      "INFO:gensim.models.word2vec:PROGRESS: at sentence #30000, processed 85968 words, keeping 11020 word types\n",
-      "INFO:gensim.models.word2vec:collected 11020 word types from a corpus of 94817 raw words and 33060 sentences\n",
+      "INFO:gensim.models.word2vec:PROGRESS: at sentence #10000, processed 28664 words, keeping 10555 word types\n",
+      "INFO:gensim.models.word2vec:PROGRESS: at sentence #20000, processed 57378 words, keeping 11020 word types\n",
+      "INFO:gensim.models.word2vec:PROGRESS: at sentence #30000, processed 85954 words, keeping 11020 word types\n",
+      "INFO:gensim.models.word2vec:collected 11020 word types from a corpus of 94729 raw words and 33060 sentences\n",
       "INFO:gensim.models.word2vec:Creating a fresh vocabulary\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'effective_min_count=1 retains 11020 unique words (100.0%% of original 11020, drops 0)', 'datetime': '2021-12-22T15:40:54.554296', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'effective_min_count=1 leaves 94817 word corpus (100.0%% of original 94817, drops 0)', 'datetime': '2021-12-22T15:40:54.555240', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'effective_min_count=1 retains 11020 unique words (100.0%% of original 11020, drops 0)', 'datetime': '2021-12-23T15:33:25.516957', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'effective_min_count=1 leaves 94729 word corpus (100.0%% of original 94729, drops 0)', 'datetime': '2021-12-23T15:33:25.517897', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
       "INFO:gensim.models.word2vec:deleting the raw counts dictionary of 11020 items\n",
       "INFO:gensim.models.word2vec:sample=0.001 downsamples 10 most-common words\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'downsampling leaves estimated 91241.20898497879 word corpus (96.2%% of prior 94817)', 'datetime': '2021-12-22T15:40:54.595885', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'downsampling leaves estimated 91099.63600387788 word corpus (96.2%% of prior 94729)', 'datetime': '2021-12-23T15:33:25.561086', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'prepare_vocab'}\n",
       "INFO:gensim.models.word2vec:estimated required memory for 11020 words and 100 dimensions: 14326000 bytes\n",
       "INFO:gensim.models.word2vec:resetting layer weights\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'update': False, 'trim_rule': 'None', 'datetime': '2021-12-22T15:40:54.681694', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'build_vocab'}\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'training model with 16 workers on 11020 vocabulary and 100 features, using sg=1 hs=0 sample=0.001 negative=5 window=5 shrink_windows=True', 'datetime': '2021-12-22T15:40:54.682168', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'train'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'update': False, 'trim_rule': 'None', 'datetime': '2021-12-23T15:33:25.650433', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'build_vocab'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'training model with 16 workers on 11020 vocabulary and 100 features, using sg=1 hs=0 sample=0.001 negative=5 window=5 shrink_windows=True', 'datetime': '2021-12-23T15:33:25.651392', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'train'}\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 15 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 14 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 13 more threads\n",
@@ -115,7 +113,7 @@
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 2 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 1 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 0 more threads\n",
-      "INFO:gensim.models.word2vec:EPOCH - 1 : training on 94817 raw words (91191 effective words) took 0.2s, 556506 effective words/s\n",
+      "INFO:gensim.models.word2vec:EPOCH - 1 : training on 94729 raw words (91044 effective words) took 0.2s, 465786 effective words/s\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 15 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 14 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 13 more threads\n",
@@ -132,7 +130,7 @@
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 2 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 1 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 0 more threads\n",
-      "INFO:gensim.models.word2vec:EPOCH - 2 : training on 94817 raw words (91213 effective words) took 0.2s, 493689 effective words/s\n",
+      "INFO:gensim.models.word2vec:EPOCH - 2 : training on 94729 raw words (91131 effective words) took 0.3s, 289520 effective words/s\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 15 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 14 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 13 more threads\n",
@@ -149,9 +147,9 @@
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 2 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 1 more threads\n",
       "INFO:gensim.models.word2vec:worker thread finished; awaiting finish of 0 more threads\n",
-      "INFO:gensim.models.word2vec:EPOCH - 3 : training on 94817 raw words (91308 effective words) took 0.2s, 540353 effective words/s\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'training on 284451 raw words (273712 effective words) took 0.5s, 513376 effective words/s', 'datetime': '2021-12-22T15:40:55.215650', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'train'}\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'params': 'Word2Vec(vocab=11020, vector_size=100, alpha=0.025)', 'datetime': '2021-12-22T15:40:55.216105', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'created'}\n"
+      "INFO:gensim.models.word2vec:EPOCH - 3 : training on 94729 raw words (91155 effective words) took 0.2s, 456245 effective words/s\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'msg': 'training on 284187 raw words (273330 effective words) took 0.7s, 374848 effective words/s', 'datetime': '2021-12-23T15:33:26.381239', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'train'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'params': 'Word2Vec(vocab=11020, vector_size=100, alpha=0.025)', 'datetime': '2021-12-23T15:33:26.381592', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'created'}\n"
      ]
     },
     {
@@ -160,7 +158,7 @@
      "text": [
       "INFO:root:Word2Vec training finished\n",
       "INFO:root:Saving model at model_out\n",
-      "INFO:gensim.utils:Word2Vec lifecycle event {'fname_or_handle': 'model_out', 'separately': 'None', 'sep_limit': 10485760, 'ignore': frozenset(), 'datetime': '2021-12-22T15:40:55.217771', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'saving'}\n",
+      "INFO:gensim.utils:Word2Vec lifecycle event {'fname_or_handle': 'model_out', 'separately': 'None', 'sep_limit': 10485760, 'ignore': frozenset(), 'datetime': '2021-12-23T15:33:26.383109', 'gensim': '4.1.2', 'python': '3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \\n[GCC 9.4.0]', 'platform': 'Linux-5.4.0-91-generic-x86_64-with-glibc2.27', 'event': 'saving'}\n",
       "INFO:gensim.utils:not storing attribute cum_table\n",
       "INFO:gensim.utils:saved model_out\n",
       "INFO:root:Model saved\n"
