--- a/mowl/examples/TransE/TransE.ipynb
+++ b/mowl/examples/TransE/TransE.ipynb
@@ -9,6 +9,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "906b5841",
+   "metadata": {},
+   "source": [
+    "### Knowledge Graph\n",
+    "\n",
+    "Let $KG = (V, E, L; \\vdash)$ be a knowledge graph with a set of\n",
+    "    vertices $V$, a set of edges $E \\subseteq V \\times V$, a label\n",
+    "    function $L: V \\cup E \\mapsto Lab$ that assigns labels from a set\n",
+    "    of labels $Lab$ to vertices and edges, and an inference relation\n",
+    "    $\\vdash$.\n",
+    "    \n",
+    "**A knowledge graph embedding is a function** $f_\\eta : L(V) \\cup L(E) \\mapsto \\mathbb{R}^n$. That is, the function takes elements from the set $ L(V) \\cup L(E) \\subseteq Lab$ and gets elements in $\\mathbb{R}^n$, where $n$ is the _embedding size_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b624fddb",
+   "metadata": {},
+   "source": [
+    "### TransE idea\n",
+    "TransE aims to model multirelational data by representing relationships as **translations** in the following way:\n",
+    "\n",
+    "Consider an edge is the graph of the form $(h, \\ell, t)$, where $h$ is the head of the edge, $\\ell$ is the type of relation and $t$ is the tail of the edge. Let's denote the corresponding embeddings as $\\boldsymbol{h}$, $\\boldsymbol{\\ell}$ and $\\boldsymbol{t}$. TransE learns the embeddings such that: \n",
+    "$$\\boldsymbol{h} + \\boldsymbol{\\ell} \\approx \\boldsymbol{t}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39811882",
+   "metadata": {},
+   "source": [
+    "### Objective function\n",
+    "TransE minimizes the following objective function: $$\n",
+    "\\mathcal{L}=\\sum_{(h, \\ell, t) \\in S} \\sum_{\\left(h^{\\prime}, \\ell, t^{\\prime}\\right) \\in S_{(h, \\ell, t)}^{\\prime}}\\left[\\gamma+d(\\boldsymbol{h}+\\boldsymbol{\\ell}, \\boldsymbol{t})-d\\left(\\boldsymbol{h}^{\\prime}+\\boldsymbol{\\ell}, \\boldsymbol{t}^{\\prime}\\right)\\right]_{+}\n",
+    "$$\n",
+    "\n",
+    "Where $d(\\boldsymbol{h}+\\boldsymbol{\\ell}, \\boldsymbol{t})$ is the _dissimilarity_ score of a positive edge. Furthermore, $d\\left(\\boldsymbol{h}^{\\prime}+\\boldsymbol{\\ell}, \\boldsymbol{t}^{\\prime}\\right)$ is the _dissimilarity_ score for a negative triple obtained by corrupting either the head or tail (but not both) of a positive triple. In this way, TransE favors lower scores for positive edges and big scores for negative edges. \n",
+    "\n",
+    "Regarding the parameter $\\gamma$, it is used to enforce that the score of a positive edge is different (lower) than the score of a negative edge by at least $\\gamma$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58cb7de0",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4ef97c06",
