:art: update translational models notebook

--- a/mowl/examples/Translational/Translational.ipynb
+++ b/mowl/examples/Translational/Translational.ipynb
@@ -52,9 +52,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "58cb7de0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d1b3be",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -62,7 +64,19 @@
    "execution_count": 1,
    "id": "4ef97c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mowl.embeddings.graph_based.translational'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/ql/kb1nj68x0ms0cnstm9m4sd7myf9c6p/T/ipykernel_21366/3396277448.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mppi_yeast\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPPIYeastSlimDataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_based\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslational\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTranslationalOnt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mowl.embeddings.graph_based.translational'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../../\")\n",
@@ -72,7 +86,7 @@
     "\n",
     "from mowl.datasets.ppi_yeast import PPIYeastSlimDataset\n",
     "\n",
-    "from mowl.embeddings.graph_based.transE.model import OntTransE"
+    "from mowl.embeddings.graph_based.translational.model import TranslationalOnt"
    ]
   },
   {
