:memo: update some notebooks

--- a/mowl/examples/DL2Vec/DL2Vec.ipynb
+++ b/mowl/examples/DL2Vec/DL2Vec.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e70e8338",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,57 @@
     "\n",
     "\n",
     "#logging.basicConfig(level=logging.DEBUG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DL2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mowl.graph.util import parser_factory\n",
+    "from mowl.walking.util import walking_factory\n",
+    "import gensim\n",
+    "\n",
+    "dataset = PPIYeastSlimDataset()\n",
+    "\n",
+    "parser = parser_factory(\n",
+    "    \"dl2vec\", # taxonomy, taxonomy_rels, owl2vec_star\n",
+    "    dataset.ontology, \n",
+    "    bidirectional_taxonomy=True)\n",
+    "\n",
+    "edges = parser.parse()\n",
+    "\n",
+    "walks_outfile = \"data/walks.txt\"\n",
+    "walker = walking_factory(\n",
+    "    \"deepwalk\", # node2vec\n",
+    "    edges, \n",
+    "    100, #num_walks \n",
+    "    50, #walk_length \n",
+    "    0, #alpha\n",
+    "    8, #num_workers\n",
+    "    outfile=walks_outfile\n",
+    ")\n",
+    "walker.walk()\n",
+    "\n",
+    "sentences = gensim.models.word2vec.LineSentence(walks_outfile)\n",
+    "model = gensim.models.Word2Vec(\n",
+    "    sentences, \n",
+    "    sg=1, \n",
+    "    min_count=1, \n",
+    "    vector_size=self.vector_size, \n",
+    "    window = self.window, \n",
+    "    epochs = self.num_walks, \n",
+    "    workers = self.num_procs)\n",
+    "\n",
+    "model.save(\"output_file\")\n"
    ]
   },
   {
