--- a/mowl/examples/Walking/Walking.ipynb
+++ b/mowl/examples/Walking/Walking.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2e401736",
    "metadata": {},
    "source": [
     "# Walking"
@@ -10,8 +11,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a46b69d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "/lib/x86_64-linux-gnu/libm.so.6: version `GLIBC_2.29' not found (required by /home/zhapacfp/anaconda3/envs/mowldev/lib/python3.7/site-packages/cppsnap.cpython-37m-x86_64-linux-gnu.so)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14729/3632238661.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mppi_yeast\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPPIYeastSlimDataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_based\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdl2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDL2Vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgensim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWord2Vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpkl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Github/mowl/mowl/embeddings/graph_based/dl2vec/model.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutil\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mparser_factory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalking\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutil\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwalking_factory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Github/mowl/mowl/walking/util.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalking\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepwalk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDeepWalk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalking\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNode2Vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mwalking_factory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethod_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medges\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_walks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwalk_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworkers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Github/mowl/mowl/walking/node2vec/model.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalking\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalking\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWalkingModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnode2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNode2Vec\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mN2V\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmowl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGraph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mNode2Vec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWalkingModel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mowldev/lib/python3.7/site-packages/node2vec/model.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcppsnap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnetworkx\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpsutil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgensim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWord2Vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: /lib/x86_64-linux-gnu/libm.so.6: version `GLIBC_2.29' not found (required by /home/zhapacfp/anaconda3/envs/mowldev/lib/python3.7/site-packages/cppsnap.cpython-37m-x86_64-linux-gnu.so)"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../../\")\n",
@@ -40,6 +58,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e93f24ae",
    "metadata": {},
    "source": [
     "## Example with DL2Vec"
@@ -48,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9813337c",
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff46afe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "9bbfe804",
    "metadata": {},
    "outputs": [
     {
@@ -532,6 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "44133964",
    "metadata": {},
    "outputs": [
     {
@@ -568,6 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "3dcabeba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,6 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "9249335b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,6 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "adcab2c9",
    "metadata": {},
    "outputs": [
     {
@@ -654,6 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "5df197c7",
    "metadata": {},
    "outputs": [
     {
@@ -673,6 +700,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86803c42",
    "metadata": {},
    "source": [
     "## Example with Node2Vec"
@@ -681,6 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f6610cce",
    "metadata": {},
    "outputs": [
     {
@@ -719,6 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9d015117",
    "metadata": {},
    "outputs": [
     {
@@ -937,6 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "173ad298",
    "metadata": {},
    "outputs": [
     {
@@ -972,6 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "0174c837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,6 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "f88c34ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,6 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "fd848a68",
    "metadata": {},
    "outputs": [
     {
@@ -1058,6 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d0ff6c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1065,9 +1100,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mowl37",
+   "display_name": "mowldev",
    "language": "python",
-   "name": "mowl37"
+   "name": "mowldev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1079,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
