--- a/mowl/examples/Application_of_ontology_embedding.ipynb
+++ b/mowl/examples/Application_of_ontology_embedding.ipynb
@@ -8,6 +8,8 @@
     "Sarah M. Alghamdi\n",
     "\n",
     "------------------------------------\n",
+    "# Application of ontology embedding\n",
+    "\n",
     "this is a simple implemantation that takes vectors of genes and diseases and positives dictionary\n",
     "\n",
     "then predict gene-disease association based on unsupervised and supervised methods\n",
@@ -16,7 +18,7 @@
     "\n",
     "supervised method uses MLP with one hidden layer and does the training on 10-fold-cross validation\n",
     "\n",
-    "In evaluation we use ranked ROCAUC\n",
+    "using those methods, we can find the most similar gene or genes to diseases\n",
     "\n",
     "inputs :\n",
     "\n",
@@ -64,91 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_vectors_filename = \"dl2vec_mouse_genes_embedding.json\"\n",
-    "diseases_vectors_filename = \"dl2vec_human_diseases_embedding.json\"\n",
-    "positives_filename = \"mouse_positives.json\"\n",
-    "hard = False\n",
-    "ratio = 5\n",
-    "Vector_size = 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66d18561",
-   "metadata": {},
-   "source": [
-    "For evaluation we use the following methods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bd10acae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def computeROC_AUC(OGs_HDs_sim,HDs_keys,OGs_keys,h_positives):\n",
-    "    OGs_HDs_sim_t = OGs_HDs_sim\n",
-    "    ranks = np.argsort(OGs_HDs_sim_t, axis=1)\n",
-    "    TPR = [0]\n",
-    "    FPR = [0]\n",
-    "    prev= [0,0]\n",
-    "    P=0\n",
-    "    N=0\n",
-    "    positive_genes = set([])\n",
-    "    includedDiseases =  np.zeros(len(HDs_keys))\n",
-    "    print(OGs_HDs_sim_t.shape,len(HDs_keys),len(OGs_keys))\n",
-    "\n",
-    "    positives_matrix = np.zeros([len(HDs_keys),len(OGs_keys)])\n",
-    "    for og in range(0,len(OGs_keys)):\n",
-    "        for hd in range(0,len(HDs_keys)):\n",
-    "            if(HDs_keys[hd] in  h_positives):\n",
-    "                if(OGs_keys[og] in h_positives[HDs_keys[hd]]):\n",
-    "                    positives_matrix[hd][og] = 1\n",
-    "                    includedDiseases[hd]=1\n",
-    "                    positive_genes.add(OGs_keys[og])\n",
-    "    ranking_dic_disease={}\n",
-    "    ranking_dic_gene={}\n",
-    "    positives_ranks = {}\n",
-    "\n",
-    "    for hd in range(0,len(HDs_keys)):\n",
-    "        if(includedDiseases[hd]==1):\n",
-    "            p = np.sum(positives_matrix[hd])\n",
-    "            P+= p\n",
-    "            N+= len(OGs_keys)-p\n",
-    "    print(\"p\",P)    \n",
-    "    print(\"included_Disease\", np.sum(includedDiseases))\n",
-    "    for r in range(0,len(OGs_keys)):\n",
-    "        TP = prev[0]\n",
-    "        FP = prev[1]\n",
-    "        for hd in range(0,len(HDs_keys)):\n",
-    "            if(includedDiseases[hd]==1):\n",
-    "                g=len(OGs_keys)-r-1\n",
-    "                if (positives_matrix[hd,ranks[hd][g]] == 1):\n",
-    "                    TP+=1\n",
-    "                    if(HDs_keys[hd] not in ranking_dic_disease):\n",
-    "                        ranking_dic_disease[HDs_keys[hd]] = r+1\n",
-    "                        if (OGs_keys[g] not in ranking_dic_gene):\n",
-    "                            ranking_dic_gene[OGs_keys[g]]=[]\n",
-    "                        ranking_dic_gene[OGs_keys[g]].append(r+1)\n",
-    "                else:\n",
-    "                    FP+=1\n",
-    "        prev = [TP,FP]\n",
-    "        TPR.append(TP/P)\n",
-    "        FPR.append(FP/N)\n",
-    "    return TPR,FPR,np.trapz(TPR,FPR),P,N\n",
-    "\n",
-    "\n",
-    "#-----------------------------------------------------------\n",
-    "def precisionAt(TPR,P,FPR,N,at):\n",
-    "    return (TPR[at]*P)/((TPR[at]*P)+(FPR[at]*N))\n",
-    "\n",
-    "def recallAt(TPR,P,FPR,N,at):\n",
-    "    return TPR[at]\n",
-    "\n",
-    "def hitAt(TPR,P,FPR,N,at):\n",
-    "    return TPR[at]*P\n",
-    "#---------------------------------------------------------\n"
+    "genes_vectors_filename = \"mouse_genes_embedding.json\"\n",
+    "diseases_vectors_filename = \"human_diseases_embedding.json\"\n",
+    "positives_filename = \"mouse_positives.json\""
    ]
   },
   {
@@ -163,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "07499456",
    "metadata": {},
    "outputs": [
@@ -171,15 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the dimentions of this matrix is  (12132, 14210)\n",
-      "(12132, 14210) 12132 14210\n",
-      "p 5930.0\n",
-      "included_Disease 3731.0\n",
-      "Unsupervised prediction results on human evaluation dataset\n",
-      "ROC_AUC =  0.761253805930507\n",
-      "CI =  0.01107224318881498\n",
-      "Hits@1 @10 @50 @100 =  56.0 366.0 969.9999999999999 1351.0\n",
-      "Total positives =  5930.0\n"
+      "the dimentions of this matrix is  (12132, 14210)\n"
      ]
     }
    ],
@@ -205,17 +117,55 @@
     "    \n",
     "Similarity_matrix = cosine_similarity(np.array(human_disease_vectors),np.array(mouse_genes_vectors))\n",
     "\n",
-    "print(\"the dimentions of this matrix is \", Similarity_matrix.shape)\n",
+    "print(\"the dimentions of this matrix is \", Similarity_matrix.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "648f43fd",
+   "metadata": {},
+   "source": [
+    "After calculating cosine similarity between diseases and genes, we then can use these similarities to prdict gene-disease associations\n",
     "\n",
+    "Here we define a function that returns the most similar gene to each disease:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "31741777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing with the disease (OMIM:106190) Isolated anhidrosis with normal morphology and number sweat glands (ANHD)\n",
+      "The most similar gene to disease OMIM:106190 is MGI:99418\n",
+      "The most similar genes to disease OMIM:106190 are MGI:99418 MGI:4821354 MGI:1343498 MGI:2670747 MGI:3029925\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_most_similar_gene(disease_id, disease_genes_similarity_matrix, disease_keys, gene_keys):\n",
+    "    disease_index = disease_keys.index(disease_id)\n",
+    "    prediction_list = np.flip(np.argsort(disease_genes_similarity_matrix[disease_index]))\n",
+    "    return gene_keys[prediction_list[0]]\n",
     "\n",
-    "TPR,FPR,ROC,P,N = computeROC_AUC(Similarity_matrix,human_disease_keys,mouse_genes_keys,positives)\n",
+    "def find_top_k_most_similar_genes(disease_id,k, disease_genes_similarity_matrix, disease_keys, gene_keys):\n",
+    "    disease_index = disease_keys.index(disease_id)\n",
+    "    prediction_list = np.flip(np.argsort(disease_genes_similarity_matrix[disease_index]))\n",
+    "    return [gene_keys[prediction_list[x]] for x in range(k)]\n",
     "\n",
+    "print(\"Testing with the disease (OMIM:106190) Isolated anhidrosis with normal morphology and number sweat glands (ANHD)\")\n",
     "\n",
-    "print(\"Unsupervised prediction results on human evaluation dataset\")\n",
-    "print(\"ROC_AUC = \",ROC)\n",
-    "print(\"CI = \",2*(math. sqrt(ROC*(1-ROC)/(min([P,N])))))\n",
-    "print(\"Hits@1 @10 @50 @100 = \",hitAt(TPR,P,FPR,N,1),hitAt(TPR,P,FPR,N,10),hitAt(TPR,P,FPR,N,50),hitAt(TPR,P,FPR,N,100))\n",
-    "print(\"Total positives = \", P)\n"
+    "top = find_most_similar_gene(\"OMIM:106190\", Similarity_matrix, human_disease_keys, mouse_genes_keys )\n",
+    "\n",
+    "print(\"The most similar gene to disease OMIM:106190 is \"+ top)\n",
+    "\n",
+    "top_5 = find_top_k_most_similar_genes(\"OMIM:106190\",5, Similarity_matrix, human_disease_keys, mouse_genes_keys )\n",
+    "\n",
+    "print(\"The most similar genes to disease OMIM:106190 are \"+ \" \".join(top_5))"
    ]
   },
   {
@@ -461,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2d53e605",
    "metadata": {},
    "outputs": [
@@ -510,18 +460,15 @@
       "9\n",
       "3357 3730 373 3358\n",
       "filling the results\n",
-      "(3731, 14210) 3731 14210\n",
-      "p 5930.0\n",
-      "included_Disease 3731.0\n",
-      "Human Evaluation\n",
-      "ROC_AUC =  0.8110420136133838\n",
-      "CI =  0.010167330738477342\n",
-      "Hits@1 @10 @50 @100 =  31.0 233.0 708.0 1092.0\n",
-      "Total positives =  5930.0\n"
+      "matrix is ready!\n"
      ]
     }
    ],
    "source": [
+    "hard = False\n",
+    "ratio = 5\n",
+    "Vector_size = 100\n",
+    "\n",
     "disease = []\n",
     "genes = []\n",
     "\n",
@@ -544,22 +491,49 @@
     "\t\t\t\tindex = test_guid[disease][gene]\n",
     "\t\t\t\tOGs_HDs_sim[d][g] = result[index][1]\n",
     "\n",
+    "print(\"matrix is ready!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e47303",
+   "metadata": {},
+   "source": [
+    "Lets now test the supervised prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7fd2d6c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing with the disease (OMIM:106190) Isolated anhidrosis with normal morphology and number sweat glands (ANHD)\n",
+      "The most similar gene to disease OMIM:106190 is MGI:1923452\n",
+      "The most similar genes to disease OMIM:106190 are MGI:1923452 MGI:104744 MGI:2442253 MGI:1261813 MGI:99605\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Testing with the disease (OMIM:106190) Isolated anhidrosis with normal morphology and number sweat glands (ANHD)\")\n",
     "\n",
-    "TPR,FPR,ROC,P,N = computeROC_AUC(OGs_HDs_sim,HDs_keys,OGs_keys,positives)\n",
+    "top = find_most_similar_gene(\"OMIM:106190\", OGs_HDs_sim, HDs_keys, OGs_keys )\n",
     "\n",
+    "print(\"The most similar gene to disease OMIM:106190 is \"+ top)\n",
     "\n",
+    "top_5 = find_top_k_most_similar_genes(\"OMIM:106190\",5, OGs_HDs_sim, HDs_keys, OGs_keys )\n",
     "\n",
-    "print(\"Human Evaluation\")\n",
-    "print(\"ROC_AUC = \",ROC)\n",
-    "print(\"CI = \",2*(math. sqrt(ROC*(1-ROC)/(min([P,N])))))\n",
-    "print(\"Hits@1 @10 @50 @100 = \",hitAt(TPR,P,FPR,N,1),hitAt(TPR,P,FPR,N,10),hitAt(TPR,P,FPR,N,50),hitAt(TPR,P,FPR,N,100))\n",
-    "print(\"Total positives = \", P)"
+    "print(\"The most similar genes to disease OMIM:106190 are \"+ \" \".join(top_5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd2d6c5",
+   "id": "f5b0daf9",
    "metadata": {},
    "outputs": [],
    "source": []
