:memo: update docs

--- a/mowl/examples/Walking/Walking.ipynb
+++ b/mowl/examples/Walking/Walking.ipynb
@@ -228,7 +228,7 @@
       "WARNING: Please consider reporting this to the maintainers of com.google.inject.internal.cglib.core.$ReflectUtils$2\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "INFO:root:Dataset created in 0.435111 seconds\n",
+      "INFO:root:Dataset created in 0.494783 seconds\n",
       "INFO:root:Projecting graph...\n"
      ]
     },
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Graph projected in 14.389790 seconds\n"
+      "INFO:root:Graph projected in 13.257288 seconds\n"
      ]
     }
    ],
@@ -1853,9 +1853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mowl39",
+   "display_name": "mowlTest",
    "language": "python",
-   "name": "mowl39"
+   "name": "mowltest"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1867,7 +1867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
