--- a/mowl/examples/Onto2Vec/Onto2Vec.ipynb
+++ b/mowl/examples/Onto2Vec/Onto2Vec.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "eab9f48f",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,107 @@
     "import sys\n",
     "import os\n",
     "sys.path.append('../../../')\n",
-    "from mowl.datasets.ppi_yeast import PPIYeastSlimDataset, PPIYeastDataset\n",
-    "from mowl.embeddings.onto2vec.model import Onto2Vec\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.manifold import TSNE\n",
-    "import numpy as np"
+    "#from mowl.datasets.ppi_yeast import PPIYeastSlimDataset, PPIYeastDataset\n",
+    "#from mowl.embeddings.onto2vec.model import Onto2Vec\n",
+    "\n",
+    "#import matplotlib.pyplot as plt\n",
+    "#from sklearn.manifold import TSNE\n",
+    "#import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "81d127db",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "JVM cannot be restarted",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmowl\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmowl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minit_jvm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m20g\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/Onto2Vec/../../../mowl/__init__.py:21\u001b[0m, in \u001b[0;36minit_jvm\u001b[0;34m(memory)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minit_jvm\u001b[39m(memory):\n\u001b[1;32m     19\u001b[0m     jpype\u001b[38;5;241m.\u001b[39mshutdownJVM()\n\u001b[0;32m---> 21\u001b[0m     \u001b[43mjpype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstartJVM\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m        \u001b[49m\u001b[43mjpype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetDefaultJVMPath\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-ea\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-Xmx\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmemory\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m-Djava.class.path=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mjars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m        \u001b[49m\u001b[43mconvertStrings\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mowldev/lib/python3.9/site-packages/jpype/_core.py:177\u001b[0m, in \u001b[0;36mstartJVM\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;28;01mglobal\u001b[39;00m _JVM_started\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _JVM_started:\n\u001b[0;32m--> 177\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJVM cannot be restarted\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    179\u001b[0m args \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(args)\n\u001b[1;32m    181\u001b[0m \u001b[38;5;66;03m# JVM path\u001b[39;00m\n",
+      "\u001b[0;31mOSError\u001b[0m: JVM cannot be restarted"
+     ]
+    }
+   ],
+   "source": [
+    "import mowl\n",
+    "mowl.init_jvm(\"20g\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cc7dfef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mowl.datasets import PPIYeastDataset, PPIYeastSlimDataset\n",
+    "from mowl.reasoning.base import MOWLReasoner\n",
+    "\n",
+    "from org.semanticweb.owlapi.apibinding import OWLManager\n",
+    "from org.semanticweb.HermiT import Reasoner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e73437ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m ds \u001b[38;5;241m=\u001b[39m PPIYeastSlimDataset()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#ds.infer_axioms()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m numaxiom\u001b[38;5;241m=\u001b[39m \u001b[43mds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43montology\u001b[49m\u001b[38;5;241m.\u001b[39mgetAxiomCount()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of axioms is : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumaxiom\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#manager = OWLManager.createOWLOntologyManager()\u001b[39;00m\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/Onto2Vec/../../../mowl/datasets/base.py:70\u001b[0m, in \u001b[0;36mPathDataset.ontology\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21montology\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loaded:\n\u001b[0;32m---> 70\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ontology\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/Onto2Vec/../../../mowl/datasets/base.py:88\u001b[0m, in \u001b[0;36mPathDataset._load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ontology \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mont_manager\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloadOntologyFromOntologyDocument\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     89\u001b[0m \u001b[43m        \u001b[49m\u001b[43mjava\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43montology_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     90\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidation_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     91\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validation \u001b[38;5;241m=\u001b[39m  \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mont_manager\u001b[38;5;241m.\u001b[39mloadOntologyFromOntologyDocument(\n\u001b[1;32m     92\u001b[0m             java\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mFile(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidation_path))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "ds = PPIYeastSlimDataset()\n",
+    "#ds.infer_axioms()\n",
+    "numaxiom= ds.ontology.getAxiomCount()\n",
+    "print(f\"Number of axioms is : {numaxiom}\")\n",
+    "\n",
+    "#manager = OWLManager.createOWLOntologyManager()\n",
+    "\n",
+    "reasonerFactory = Reasoner.ReasonerFactory()\n",
+    "reasoner= reasonerFactory.createReasoner(ds.ontology)\n",
+    "reasoner.precomputeInferences()\n",
+    "\n",
+    "consistent = reasoner.isConsistent()\n",
+    "print(f\"consistent: {consistent}\")\n",
+    "\n",
+    "print(\"Get number of axioms after inference \\n\")\n",
+    "numaxiom= ds.ontology.getAxiomCount()\n",
+    "print(f\"Number of axioms is : {numaxiom}\")\n",
+    "\n",
+    "mreasoner = MOWLReasoner(reasoner)\n",
+    "mreasoner.infer_subclass_axioms(ds.ontology)\n",
+    "numaxiom= ds.ontology.getAxiomCount()\n",
+    "print(f\"Number of axioms is : {numaxiom}\")\n",
+    "\n",
+    "mreasoner.infer_equiv_class_axioms(ds.ontology)\n",
+    "numaxiom= ds.ontology.getAxiomCount()\n",
+    "print(f\"Number of axioms is : {numaxiom}\")\n",
+    "\n",
+    "mreasoner.infer_disjoint_class_axioms(ds.ontology)\n",
+    "numaxiom= ds.ontology.getAxiomCount()\n",
+    "print(f\"Number of axioms is : {numaxiom}\")\n",
+    "\n"
    ]
   },
   {
@@ -294,9 +389,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mowldev",
    "language": "python",
-   "name": "python3"
+   "name": "mowldev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -308,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
